# alerts-processor

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
assets/: geminis-labs-logo_plain.txt
docs/: architecture.md  message-contracts.md
src/: main.rs  startup.rs
src/app/: processor.rs
src/cache/: mod.rs  rules_cache.rs
src/config/: mod.rs
src/db/: connection.rs  mod.rs  models.rs  repository.rs
src/domain/: alert.rs  event.rs  mod.rs  rule.rs
src/engine/: evaluator.rs  geofence.rs  ignition.rs  mod.rs  registry.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
